# Overlay

./: .gitignore  CORS_SOLUTION.md  ICON_GENERATION.md  ILLUVIUM_API_README.md  LEADERBOARD_TROUBLESHOOTING.md  PERFORMANCE_OPTIMIZATIONS.md  PYTHON_INTEGRATION_README.md  README.md  README_AUTOMATION.md  TESTING_STATUS.md  UPDATE_GUIDE.md  WEBSITE_INTEGRATION.md  debug_api.py  generate-icons-fullpath.bat  generate-icons-simple.ps1  generate-icons.bat  illuvium_data_fetcher.py  package-lock.json  package.json  run-app.bat  run-app.ps1  run_daily_fetch.bat  set-env.ps1  setup_automation.bat  setup_daily_task.ps1  update.json  upload_builds.bat  upload_builds_to_github.py
src/: App.css  App.tsx  types.ts
src-tauri/: 2  Cargo.toml
src-tauri/src/: lib.rs  main.rs
src/components/: CompDetails.tsx  IlluvialBrowser.tsx  IlluvialCard.tsx
src/data/: compositionsApi.ts  firebase.ts  illuvialData.ts  illuviumApi.ts  leaderboardApi.ts  matchApi.ts  mockData.ts  pythonDataApi.ts  realAugments.ts  simpleLeaderboardApi.ts  simpleLeaderboardApi.ts.backup  tournamentApi.ts  tournamentProgressionApi.ts
src/data/AugmentData/Legendary/: legendaryAugmentImageMap.ts
src/data/AugmentData/Synergy/: synergyImprintImageMap.ts
